--- a/design/styles/bedrock.css
+++ b/design/styles/bedrock.css
@@ -34,3 +34,63 @@ body > main {
     grid-column: 1 / 5;
   }
 }
+
+/* ==========================================================================
+   Main structural elements
+   ========================================================================== */
+
+/* Main header
+   ========================================================================== */
+
+body > header {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: none;
+  padding: 2.5em 0;
+}
+
+body > header div:first-child {
+  grid-column: 1;
+  place-self: center end;
+  line-height: 0;
+  padding: 0 2.5em;
+}
+
+body > header div:first-child svg {
+  max-height: 6.25em;
+  width: auto;
+  fill: currentColor;
+}
+
+body > header div:last-child {
+  grid-column: 2 / 5;
+  place-self: center start;
+  padding: 0 2.5em;
+}
+
+body > header div:last-child h1 {
+  line-height: 1em;
+  margin: 1rem 0;
+  font-size: 2.5em;
+}
+
+body > header div:last-child h1 + p {
+  line-height: 1em;
+  margin: .5rem 0;
+  text-align: right;
+  font-size: 1.25em;
+}
+
+@media (max-width: 768px) {
+
+  body > header div:first-child,
+  body > header div:last-child {
+    grid-column: 1 / 5;
+    place-self: center center;
+  }
+
+  body > header div:last-child h1,
+  body > header div:last-child h1 + p {
+    text-align: center;
+  }
+}
