--- a/design/styles/bedrock.css
+++ b/design/styles/bedrock.css
@@ -94,3 +94,39 @@ body > header div:last-child h1 + p {
     text-align: center;
   }
 }
+
+/* Main dominant content
+   ========================================================================== */
+
+main {
+  padding: 2.5em;
+}
+
+main article header {
+  margin: 0 0 2.5em 0;
+}
+
+main article header h2 {
+  line-height: 1em;
+  margin: 0 0 1em 0;
+  font-size: 2.25em;
+}
+
+main article h3 {
+  line-height: 1em;
+  margin: 1em 0;
+  font-size: 1.5em;
+}
+
+main p {
+  line-height: 1.375;
+  text-align: left;
+  max-width: 80ch;
+  hyphens: auto;
+  overflow-wrap: break-word;
+  margin: 0;
+}
+
+main p + p {
+  margin: 1.375rem 0 0 0
+}
