--- a/design/styles/bedrock.css
+++ b/design/styles/bedrock.css
@@ -221,6 +221,31 @@ main p + p {
   margin: 1.375rem 0 0 0
 }
 
+/* Contact information
+   ========================================================================== */
+
+address {
+  margin: 2.5rem 0;
+  font-style: normal;
+  font-size: .875em;
+  font-weight: 300;
+  line-height: 1em;
+}
+
+address div {
+  margin: 1rem 0 0 0;
+}
+
+address div p + p {
+  margin: 0;
+}
+
+address span[itemprop="name"],
+address span[itemprop="addressCountry"] {
+  font-weight: 600;
+  letter-spacing: .03125rem;
+}
+
 /* Main footer
    ========================================================================== */
 
